@@ -1,3 +1,7 @@
+2018-09-10  Carl Hetherington  <cth@carlh.net>
+
+	* Basic export of multiple reels to multiple files.
+
 2018-09-09  Carl Hetherington  <cth@carlh.net>
 
 	* Updated fr_FR translation from Thierry Journet.
